# sf-docs-mcp

./: AGENTS.md  AGENTS.sample.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docs-env.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.codex/: config.toml  config.toml.sample
.github/workflows/: ci.yml
apps/crawler/: README.md  __init__.py  package.json  pipeline.py  types.py
apps/crawler/chunk/: __init__.py  heading.py
apps/crawler/extract/: __init__.py  content.py
apps/crawler/fetch/: __init__.py  http.py
apps/crawler/index/: __init__.py  store.py
apps/crawler/normalize/: __init__.py  url.py
apps/crawler/sitemap/: __init__.py  loader.py
apps/crawler/src/: index.js
apps/crawler/src/chunk/: mod.rs
apps/crawler/src/extract/: html.rs  mod.rs  pdf.rs
apps/crawler/src/fetch/: politeFetcher.js
apps/crawler/src/normalize/: canonicalize.js
apps/server/: Dockerfile  package.json  tsconfig.json
apps/server/data/: seed-index.json
apps/server/src/: app.ts  config.ts  index.ts  logger.ts  mcpServer.ts
apps/server/test/: integration.test.ts
db/migrations/: 001_init_persistence.sql
deploy/: fly.toml  librechat-mcp-example.json  sf-docs-mcp.service
deployment/fly/: README.md  fly.toml
docs/: container-startup.md
migrations/: 0001_init.sql  0002_updated_at_triggers.sql
src/sf_docs_mcp/: __init__.py  config.py  db.py  embeddings.py  models.py  pipeline.py  vector_store.py
src/sf_docs_mcp/services/: __init__.py  db.py  embeddings.py  indexing.py  mcp_operations.py  postgres_store.py  qdrant_store.py  retrieval.py  text_utils.py
tests/: test_pipeline.py  test_retrieval.py
(+15 files in other folders)
