[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-docs-mcp"
version = "0.1.0"
description = "Semantic search pipeline for Salesforce documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.58.0",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
